# fastapi-modular-template

./: .env.example  .gitignore  .scottycore-patterns.yaml.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  azure-pipelines-cd.yml  azure-pipelines-ci.yml  cliff.toml  docker-compose.yml.template  launch.py  pyproject.toml
.claude/agents/: core-sync.md  scottomation-manager.md  scottybiz-manager.md  scottycore-manager.md  scottydev-manager.md  scottylab-app-manager.md  scottyscan-manager.md  scottyscribe-manager.md  scottystrike-manager.md  scottysync-manager.md
.claude/hooks/: pre-commit-promote-nudge.sh
.claude/templates/: promote-scan.yml  scottycore-upgrade.yml
.forgejo/workflows/: ci.yml  promote-receive.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_add_items_search_vector.py  0002_hipaa_security_patterns.py  0003_backup_schedules_and_runs.py
app/: __init__.py  main.py
app/api/v1/: ws.py  (+14 more)
app/core/: auth.py  config.py  database.py  dependencies.py  exceptions.py  middleware.py  request_logging.py  schemas.py  service_registry.py  task_engine.py
app/web/: router.py
config/: apps.yaml
deploy/: .env.production  README.md  app-celery.service  app-web.service  backup.sh  install.sh  logrotate.conf  nginx.conf
docs/: COMPLIANCE.md  prd-core-sync-rework.md  prd-promote-skill.md  scottydev-pivot-design.md  scottydev-pivot-plan.md  scottylab-rebuild-brief.md
scottycore/: __init__.py  main.py
scripts/: config_loader.py  pattern_tracker.py  scottycore-init.py  scottycore-validate.py  sync-pane.sh  sync-watcher.py
tests/: conftest.py
(+211 files in other folders)
