[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scottycore"
version = "0.1.7"
description = "Shared FastAPI framework for the Scotty app family (auth, tenants, audit, settings, ai-backends, ...)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "slowapi>=0.1.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.3",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4",
    "croniter>=2.0",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.26", "ruff>=0.2"]
postgres = ["asyncpg>=0.29.0"]

[project.scripts]
scottycore-backup = "scottycore.services.backup.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scottycore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
